# GameKit

./: .gitignore  README.md
EngineKit/: CMakeLists.txt  win_run_make_clean_win.bat  win_run_make_win.bat  window_make_only_VS2019.bat  window_make_only_VS2019_release.bat  window_make_only_VS2022.bat
EngineKit/Assets/Shaders/: circle.frag.glsl
EngineKit/EngineLib/: CMakeLists.txt  sCore.h  spch.h
EngineKit/EngineLib/Application/: IApplication.cpp  IApplication.h
EngineKit/EngineLib/Camera/: Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  EditorCamera.cpp  EditorCamera.h  EditorCameraController.cpp  EditorCameraController.h  FPSCamera.cpp  FPSCamera.h  FPSCameraController.cpp  FPSCameraController.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  PerspectiveCamera.cpp  PerspectiveCamera.h  PerspectiveCameraController.cpp  PerspectiveCameraController.h
EngineKit/EngineLib/Core/: Assert.cpp  Assert.h  Base.h  Core.h  DataBuffer.h  Engine.cpp  Engine.h  Event.h  EventStack.h  GraphicsLayer.cpp  GraphicsLayer.h  ImGuiLayer.cpp  ImGuiLayer.h  InputDevice.cpp  InputDevice.h  InputLayer.cpp  InputLayer.h  Keyboard.cpp  Keyboard.h  Layer.cpp  Layer.h  Log.cpp  Log.h  Macro.h  Mouse.cpp  Mouse.h  PlatformDetection.h  ScriptLayer.cpp  ScriptLayer.h  Window.cpp  Window.h
EngineKit/EngineLib/Core/OpenGL/: GLWindow.cpp  GLWindow.h
EngineKit/EngineLib/ECS/: Component.cpp  Component.h  Components.cpp  Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
EngineKit/EngineLib/Event/: Event.h  EventManager.cpp  EventManager.h
EngineKit/EngineLib/Events/: Event.cpp  Event.h  EventManager.cpp  EventManager.h  GamePadEvent.cpp  GamePadEvent.h  KeyEvent.cpp  KeyEvent.h  MouseEvent.cpp  MouseEvent.h  WindowEvent.cpp  WindowEvent.h
EngineKit/EngineLib/Graphics/: Buffer.cpp  Buffer.h  BufferLayout.cpp  BufferLayout.h  Camera.cpp  Camera.h  CascadeShadow.cpp  CascadeShadow.h  Device.cpp  Device.h  Font.cpp  Font.h  Framebuffer.cpp  Framebuffer.h  Graphics.cpp  Graphics.h  Image.cpp  Image.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelNode.cpp  ModelNode.h  PointShadow.cpp  PointShadow.h  Renderbuffer.cpp  Renderbuffer.h  Shader.cpp  Shader.h  ShaderParam.cpp  ShaderParam.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  (+2 more)
EngineKit/EngineLib/Graphics/OpenGL/: GLBuffer.cpp  GLBuffer.h  GLDevice.cpp  GLDevice.h  GLFramebuffer.cpp  GLFramebuffer.h  GLRenderbuffer.cpp  GLRenderbuffer.h  GLShader.cpp  GLShader.h  GLShaderParam.cpp  GLShaderParam.h  GLTexture.cpp  GLTexture.h  GLTranslator.cpp  GLTranslator.h  GLVertexArray.cpp  GLVertexArray.h
EngineKit/EngineLib/Renderer/: DeferredRenderPass.cpp  DeferredRenderPass.h  Device.cpp  Device.h  GLCheck.cpp  GLCheck.h  Graphics.cpp  PostProcessRenderPass.cpp  PostProcessRenderPass.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  Renderer3D.cpp  Renderer3D.h  SkyboxRenderPass.cpp  SkyboxRenderPass.h  SpriteRenderPass.cpp  SpriteRenderPass.h
EngineKit/EngineLib/Resource/: FontLoader.cpp  FontLoader.h  ImageLoader.cpp  ImageLoader.h  ModelLoader.cpp  ModelLoader.h  Resource.cpp  Resource.h  ResourceCache.cpp  ResourceCache.h  ResourceHandle.cpp  ResourceHandle.h  ResourceManager.cpp  ResourceManager.h  ShaderLoader.cpp  ShaderLoader.h  TextureLoader.cpp  TextureLoader.h
EngineKit/EngineLib/Scripting/: Script.h  ScriptContext.h  ScriptManager.h
EngineKit/EngineLib/Scripting/Context/: LuaCore.h  LuaRender.cpp  LuaRender.h
EngineKit/EngineLib/Utils/: EngineVersion.cpp  EngineVersion.h  Exception.h  File.cpp  File.h  FileHelper.h  FilePath.h  GlmInclude.h  HashedString.h  IService.h  Init.cpp  Init.h  OpenGLLibInclude.h  Random.cpp  Random.h  ResourceId.cpp  ResourceId.h  ResourcePath.cpp  ResourcePath.h  ServiceManager.cpp  ServiceManager.h  StbImageUtils.cpp  StbImageUtils.h  StbiImpl.cpp  String.h  Timestep.h  Timing.cpp  Timing.h  Transform.cpp  Transform.h
EngineKit/EngineTest/: CMakeLists.txt
EngineKit/Sandbox/: CMakeLists.txt  GameLayer.cpp  GameLayer.h  SandboxApp.cpp  SandboxApp.h  SceneBuilderLayer.cpp  SceneBuilderLayer.h  main.cpp
EngineKit/cmake/inConfig/: PathEngine.h.in  VersionEngine.h.in  config.h.in
EngineKit/cmake/modules/: FTS_CommonMacros.cmake  utilities.cmake
